--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <h3 class="groupN">第一组</h3>
                     <div class="subScore iconfont icon-jian-xianxingyuankuang"></div>
                     <div class="flagContent">
+                        <div class="grayFlag"></div>
                         <!-- <span></span> -->
                     </div>
                     <div class="score">0</div>
